IGNITE-16689 Get rid of guava usage, fix JOIN with USING. - Fixes #726.
Signed-off-by: zstan <stanilovsky@gmail.com>